fix:landing gradient

--- a/apps/excelidraw-frontend/app/globals.css
+++ b/apps/excelidraw-frontend/app/globals.css
@@ -1,2 +1,71 @@
-@import "tailwindcss";
 
+@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap');
+*{
+    font-family:'Manrope',sans-serif;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
+
+.animate-marquee:hover {
+  animation-play-state: paused;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes gradient-x {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
+.animate-marquee {
+  animation: marquee 25s linear infinite;
+}
+
+.animate-gradient-x {
+  animation: gradient-x 3s ease infinite;
+}
+
+body {
+  background: oklch(43.9% 0 0);
+  color: white;
+}
+.bg-monochrome-gradient {
+  background: linear-gradient(
+    90deg,
+    #ffffff 0%,
+    #a1a1a1 30%,
+    #7f7f7f 50%,
+    #a1a1a1 70%,
+    #ffffff 100%
+  );
+  background-size: 400% 400%;
+  animation: gradientMove 6s linear infinite;
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  100% { background-position: 100% 50%; }
+}
